--- a/Shop/catalogue-page/app/index.html
+++ b/Shop/catalogue-page/app/index.html
@@ -421,8 +421,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Тип</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Тип<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -491,8 +490,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Бренды</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Бренды<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -571,8 +569,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Серия</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Серия<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -617,8 +614,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Назначение</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Назначение<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -663,8 +659,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Встроенные системы</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Встроенные системы<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -694,8 +689,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Управление</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Управление<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -725,8 +719,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Цвет</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Цвет<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -776,8 +769,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Отверстия для монтажа</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Отверстия для монтажа<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -807,8 +799,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Стилистика дизайна</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Стилистика дизайна<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -838,8 +829,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Форма</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Форма<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -869,8 +859,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Механизм</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Механизм<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -900,8 +889,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Монтаж</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Монтаж<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -931,8 +919,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Высота излива</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Высота излива<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
@@ -962,8 +949,7 @@
                                         </div>
                                         <div class="button_container">
                                             <span class="arrow"><i class="icon-angle-right"></i></span>
-                                            <span class="section_title">Типоразмер<br> шлангового подключения</span>
-                                            <span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span>
+                                            <span class="section_title">Типоразмер<br> шлангового подключения<span class="description" data-balloon="Здесь какое-то описание..." data-balloon-pos="up"><i class="icon-question-circle-o"></i></span></span>
                                         </div>
                                     </div>
                                     <div class="tab_content">
