--- a/Shop/catalogue-page/app/index.html
+++ b/Shop/catalogue-page/app/index.html
@@ -685,12 +685,12 @@
                                         <ul class="param_list">
                                             <li class="checkbox">
                                                 <input type="radio" name="radio" class="checkbox_item" id="checkbox_30">
-                                                <label for="checkbox_30">Значение<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
+                                                <label for="checkbox_30">Да<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
                                                 </label>
                                             </li>
                                             <li class="checkbox">
                                                 <input type="radio" name="radio" class="checkbox_item" id="checkbox_31">
-                                                <label for="checkbox_31">Значение<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
+                                                <label for="checkbox_31">Нет<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
                                                 </label>
                                             </li>
                                         </ul>
