--- a/Shop/catalogue-page/app/index.html
+++ b/Shop/catalogue-page/app/index.html
@@ -1281,7 +1281,7 @@
                                         <span>Найдено: <span class="count_res">9 732</span> товара</span>
                                     </div>
                                     <div class="sort-block">
-                                        <span class="selected" href="#">По популярности⏷</span>
+                                        <span class="selected" href="#">По популярности</span>
                                         <span class="desc">
                                               <a class="active" href="#">По популярности</a>
                                               <a href="#">Сначала дешевые</a>
@@ -1295,7 +1295,7 @@
                                     </div>
                                     <div class="delivery-count">
                                         <span class="first">Показать:</span>
-                                        <span class="selected" href="#">30⏷</span>
+                                        <span class="selected" href="#">30</span>
                                         <span class="desc">
                                             <a class="active" href="#">30</a>
                                             <a href="#">60</a>
