--- a/Shop/home-page/index.html
+++ b/Shop/home-page/index.html
@@ -66,7 +66,7 @@
 							<span class="text">999 шт.</span>
 						</div>
 						<div class="cash">
-							<span class="text">9 999 999 ₽</span>
+							<span class="text">9 999 999 <span class="rub">руб.</span></span>
 							<a href="#" class="button_cash">
 								<i class="icon-basket-strong"></i>
 							</a>
@@ -194,7 +194,7 @@
 							<div class="filed">
 								<img src="icons/11.svg" alt="">
 								<span>999 шт.</span>
-								<strong>9 999 999 ₽</strong>
+								<strong>9 999 999 <span class="rub">руб.</span></strong>
 							</div>
 							<a href="#" class="btn">Оформить</a>
 						</div>
@@ -1354,7 +1354,7 @@
 				            	<div class="col-md-4 col-xs-8">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item1.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-right"></i></a>
@@ -1364,7 +1364,7 @@
 								<div class="col-md-2 col-xs-4">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-right"></i></a>
@@ -1372,7 +1372,7 @@
 									</div>
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item3.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-right"></i></a>
@@ -1382,7 +1382,7 @@
 								<div class="col-md-2 col-xs-4 mobile-new-row">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item4.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 									</div>
 								</div>
 								<div class="col-md-4 col-xs-8">
@@ -1390,19 +1390,19 @@
 										<div class="col-xs-6">
 											<div class="slider-item">
 												<a href="#"><img src="images/content/slider-item5.jpg" alt=""></a>
-												<span class="item-price">7 910 ₽</span>
+												<span class="item-price">7 910 <span class="rub">руб.</span></span>
 											</div>
 										</div>
 										<div class="col-xs-6">
 											<div class="slider-item">
 												<a href="#"><img src="images/content/slider-item6.jpg" alt=""></a>
-												<span class="item-price">7 910 ₽</span>
+												<span class="item-price">7 910 <span class="rub">руб.</span></span>
 											</div>
 										</div>
 									</div>
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item7.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 									</div>
 								</div>
 				            </div>
@@ -1412,7 +1412,7 @@
 				            	<div class="col-md-4 col-xs-8">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item1.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-rightht"></i></a>
@@ -1422,7 +1422,7 @@
 								<div class="col-md-2 col-xs-4">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-right"></i></a>
@@ -1430,7 +1430,7 @@
 									</div>
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item3.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-right"></i></a>
@@ -1440,7 +1440,7 @@
 								<div class="col-md-2 col-xs-4 mobile-new-row">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item4.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 									</div>
 								</div>
 								<div class="col-md-4 col-xs-8">
@@ -1448,19 +1448,19 @@
 										<div class="col-xs-6">
 											<div class="slider-item">
 												<a href="#"><img src="images/content/slider-item5.jpg" alt=""></a>
-												<span class="item-price">7 910 ₽</span>
+												<span class="item-price">7 910 <span class="rub">руб.</span></span>
 											</div>
 										</div>
 										<div class="col-xs-6">
 											<div class="slider-item">
 												<a href="#"><img src="images/content/slider-item6.jpg" alt=""></a>
-												<span class="item-price">7 910 ₽</span>
+												<span class="item-price">7 910 <span class="rub">руб.</span></span>
 											</div>
 										</div>
 									</div>
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item7.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 									</div>
 								</div>
 				            </div>
@@ -1470,7 +1470,7 @@
 				            	<div class="col-md-4 col-xs-8">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item1.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-right"></i></a>
@@ -1480,7 +1480,7 @@
 								<div class="col-md-2 col-xs-4">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-right"></i></a>
@@ -1488,7 +1488,7 @@
 									</div>
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item3.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 										<span class="slider-item-more">
 											<a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
 											<a class="item-all" href="#">Все ванны <i class="icon-angle-right"></i></a>
@@ -1498,7 +1498,7 @@
 								<div class="col-md-2 col-xs-4 mobile-new-row">
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item4.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 									</div>
 								</div>
 								<div class="col-md-4 col-xs-8">
@@ -1506,19 +1506,19 @@
 										<div class="col-xs-6">
 											<div class="slider-item">
 												<a href="#"><img src="images/content/slider-item5.jpg" alt=""></a>
-												<span class="item-price">7 910 ₽</span>
+												<span class="item-price">7 910 <span class="rub">руб.</span></span>
 											</div>
 										</div>
 										<div class="col-xs-6">
 											<div class="slider-item">
 												<a href="#"><img src="images/content/slider-item6.jpg" alt=""></a>
-												<span class="item-price">7 910 ₽</span>
+												<span class="item-price">7 910 <span class="rub">руб.</span></span>
 											</div>
 										</div>
 									</div>
 									<div class="slider-item">
 										<a href="#"><img src="images/content/slider-item7.jpg" alt=""></a>
-										<span class="item-price">7 910 ₽</span>
+										<span class="item-price">7 910 <span class="rub">руб.</span></span>
 									</div>
 								</div>
 				            </div>
@@ -1953,7 +1953,7 @@
 									<div class="wrap_order">
 										<img src="icons/20.svg" alt="">
 										<span class="current">999 шт.</span>
-										<span>9 999 999 ₽</span>
+										<span>9 999 999 <span class="rub">руб.</span></span>
 										<a href="#" class="button">
 											Оформить
 										</a>
