--- a/portfolio/rofl/app/index.html
+++ b/portfolio/rofl/app/index.html
@@ -13,7 +13,12 @@
 <body>
 
 <div id="wrapper">
-	    <p>Ну, я же говорил не жми((</p>
+	    <div class="post animated">
+	    	<p class="lin1">Без</p>
+	    	<p class="lin2">Обид</p>
+	    	<p class="lin3">Пожалуйста</p>
+	    	<p class="lin4">Александра)</p>
+	    </div>
 	    <a href="#" class="animated">Донт тач ми!!</a>
 </div>
 
