--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -312,15 +312,15 @@
                                     <a class="bottom popup-youtube" href="https://www.youtube.com/watch?v=KPTIY-ruG7g" target="_blank">Cмотреть</a>
                                 </div>
                                 <div class="block">
-                                    <a class="top top5 popup-youtube" href="https://www.youtube.com/watch?v=2kmVR-K4_gU" target="_blank"></a>
-                                    <p><span>Теперь Я Босс! </span>Правила успеха Алексея Локонцева, основателя TOPGUN</p>
-                                    <a class="bottom popup-youtube" href="https://www.youtube.com/watch?v=2kmVR-K4_gU" target="_blank">Cмотреть</a>
+                                    <a class="top top7 popup-youtube" href="https://www.youtube.com/watch?v=vt0c1BXCAjY" target="_blank"></a>
+                                    <p><span>Алексей Локонцев </span>Интервью каналу "Миллионы в Регионы"</p>
+                                    <a class="bottom popup-youtube" href="https://www.youtube.com/watch?v=vt0c1BXCAjY" target="_blank">Cмотреть</a>
                                 </div>
                                 <div class="block">
-                                    <a class="top top6 popup-youtube" href="https://www.youtube.com/watch?v=KPTIY-ruG7g" target="_blank"></a>
-                                    <p>Synergy Insight Forum 2018<span>Алексей Локонцев TOPGUN</span>
+                                    <a class="top top8 popup-youtube" href="https://www.youtube.com/watch?v=xtMq6hfkaS0" target="_blank"></a>
+                                    <p>Дмитрий "Трансформатор" <span>Портнягин в гостях у TOPGUN</span>
                                     </p>
-                                    <a class="bottom popup-youtube" href="https://www.youtube.com/watch?v=KPTIY-ruG7g" target="_blank">Cмотреть</a>
+                                    <a class="bottom popup-youtube" href="https://www.youtube.com/watch?v=xtMq6hfkaS0" target="_blank">Cмотреть</a>
                                 </div>
                             </div>
                         </div>
