--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -394,7 +394,7 @@
                                     </div>
                                     <div class="place_block">
                                         <div class="img_block">
-                                            <img src="img/place1.jpg" alt="place" class="place_preview">
+                                            <img src="img/place2.jpg" alt="place" class="place_preview">
                                             <img src="img/place_logo.svg" alt="logo" class="place_logo">
                                             <div class="decoration_items">
                                                 <span class="decor1"></span>
@@ -404,11 +404,11 @@
                                             </div>
                                         </div>
                                         <div class="description_block">
-                                            <span class="title">Colizeum <span>TULA</span></span>
-                                            <span class="adress"><span>/// ТУЛА</span>
-                                            <br>ул. Каминского, д. 24В
-                                            <br>ТЦ «Тройка»
-                                            <br>+7 (920) 276 66 67</span>
+                                            <span class="title">Colizeum <span>BELYAEVO</span></span>
+                                            <span class="adress"><span>/// Москва</span>
+                                            <br>Беляево
+                                            <br>ул. Профсоюзная, д. 104
+                                            <br>+7 (925) 90 23 444</span>
                                             <div class="links">
                                                 <a href="#"><img src="img/vk_icon.svg" alt="vk"></a>
                                                 <a href="#"><img src="img/insta_icon.svg" alt="inst"></a>
@@ -418,8 +418,7 @@
                                     </div>
                                     <div class="place_block">
                                         <div class="img_block">
-                                            <img src="img/place1.jpg" alt="place" class="place_preview">
-                                            <img src="img/place_logo.svg" alt="logo" class="place_logo">
+                                            <img src="img/place3.jpg" alt="place" class="place_preview">
                                             <div class="decoration_items">
                                                 <span class="decor1"></span>
                                                 <span class="decor2"></span>
@@ -428,11 +427,11 @@
                                             </div>
                                         </div>
                                         <div class="description_block">
-                                            <span class="title">Colizeum <span>TULA</span></span>
-                                            <span class="adress"><span>/// ТУЛА</span>
-                                            <br>ул. Каминского, д. 24В
-                                            <br>ТЦ «Тройка»
-                                            <br>+7 (920) 276 66 67</span>
+                                            <span class="title">Colizeum <span>colambus</span></span>
+                                            <span class="adress"><span>/// Москва</span>
+                                            <br>Пражская
+                                            <br>ул. Кировоградская, д. 13A
+                                            <br>+7 (495) 960 44 42</span>
                                             <div class="links">
                                                 <a href="#"><img src="img/vk_icon.svg" alt="vk"></a>
                                                 <a href="#"><img src="img/insta_icon.svg" alt="inst"></a>
@@ -445,17 +444,39 @@
                             </div>
                             <div class="tab_container">
                                 <div class="top_title">
-                                        <span>Colizeum_COLUMBUS</span>
-                                    </div>
-                                    <span class="bottom_line"></span>
-                                    <span class="btn_left"></span>
-                                    <span class="btn_right"></span>
+                                    <span>Colizeum_TULA</span>
+                                    <span>Colizeum_BELYAEVO</span>
+                                    <span>Colizeum_COLUMBUS</span>
+                                </div>
+                                <span class="bottom_line"></span>
                                 <div class="tab_content">
                                     <div class="gallery">
-                                        <div class="place_slider_1">
-                                            <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
-                                            <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
-                                            <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
+                                        <div class="slide_content">
+                                            <span class="btn_left btn_left1"></span>
+                                            <span class="btn_right btn_right1"></span>
+                                            <div class="place_slider_1">
+                                                <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
+                                            </div>
+                                        </div>
+                                        <div class="slide_content">
+                                            <span class="btn_left btn_left2"></span>
+                                            <span class="btn_right btn_right2"></span>
+                                            <div class="place_slider_2">
+                                                <div class="photo"><img src="img/photo2.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/photo2.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/photo2.jpg" alt="photo"></div>
+                                            </div>
+                                        </div>
+                                        <div class="slide_content">
+                                            <span class="btn_left btn_left3"></span>
+                                            <span class="btn_right btn_right3"></span>
+                                            <div class="place_slider_3">
+                                                <div class="photo"><img src="img/photo3.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/photo3.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/photo3.jpg" alt="photo"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
