--- a/Shop/home-page/index.html
+++ b/Shop/home-page/index.html
@@ -852,7 +852,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="item selected">
+					<div class="item">
 						<a href="#" class="choice_categories">
 							<div class="icon">
 								<img src="icons/16.svg" alt="">
