--- a/Shop/catalogue-page/app/index.html
+++ b/Shop/catalogue-page/app/index.html
@@ -128,6 +128,7 @@
         </div>
     </div>
     <div class="wrapper">
+        <span class="found_amount"><button class="b-found__quantity-phrase">Показать 0 товаров</button></span>
         <div class="attention_line">Внимание! С 10.04 по 17.04 работаем до 19:00.</div>
         <div class="header">
             <div class="container">
@@ -832,7 +833,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="item selected">
+                            <div class="item">
                                 <a href="#" class="choice_categories">
                                     <div class="icon">
                                         <img src="icons/16.svg" alt="">
@@ -1370,7 +1371,6 @@
                         <div class="left-sidebar col-lg-3 col-md-12">
                             <!--FORM-->
                             <div class="filter">
-                                <span class="found_amount"><button class="b-found__quantity-phrase">Показать 0 товаров</button></span>
                                 <div class="section range">
                                     <div class="tab_title">
                                         <button class="open_button"></button>
@@ -1387,13 +1387,13 @@
                                     </div>
                                     <div class="tab_content">
                                         <div class="extra-controls">
-                                            <input type="text" class="input_start" />
+                                            <input type="text" class="input_start input_s1" />
                                             <span class="hyp">-</span>
-                                            <input type="text" class="input_end" />
+                                            <input type="text" class="input_end input_e1" />
                                             <span class="rub">руб.</span>
                                         </div>
                                         <div class="range-slider">
-                                            <input type="text" class="js-range-slider" value="" />
+                                            <input type="text" class="js-range-slider r-slider1" value="" />
                                         </div>
                                         <ul class="param_list">
                                             <li class="checkbox">
